zaakafhandelcomponent-1896 Use of Optional in findXXX() service methods